# pokemon_wiki

./: .gitignore  README.md  crawler.py  main.py  pyproject.toml
.cursor/rules/: core.mdc
1997/: crawler.py  generate_urls.py  urls.txt
advanced_generation/: generate_urls.py  urls.txt
