[project]
name = "pokemon-wiki"
version = "0.1.0"
description = "Pokemon Wiki Crawler"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.11.11",
    "requests",
    "beautifulsoup4",
    "reportlab",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["."]
